Modified Notebook so it displays the plotly graph

--- a/Housing Example.ipynb
+++ b/Housing Example.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~gregv21v/6.embed\" height=\"525\" width=\"100%\"></iframe>"
+      ],
       "text/plain": [
-       "'file://C:\\\\Users\\\\Gregory Venezia\\\\Documents\\\\BARI (Aspire Internship)\\\\Craigslist\\\\Examples\\\\temp-plot.html'"
+       "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,6 +32,7 @@
     "import plotly\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
+    "import plotly.tools as tls\n",
     "\n",
     "\n",
     "\n",
@@ -58,10 +62,11 @@
     "    )\n",
     "]\n",
     "\n",
-    "plotly.offline.plot({\n",
-    "    \"data\" : data,\n",
-    "    \"layout\" : go.Layout(title=\"hello world\")\n",
-    "})\n"
+    "py.iplot(data, filename=\"basic-prices\")\n",
+    "#print (plot.url)\n",
+    "\n",
+    "tls.embed(\"https://plot.ly/~gregv21v/6/\")\n",
+    "\n"
    ]
   },
   {
