Google Maps Example
Updated the google maps example so its function.
Since google maps does not show up on github or nbviewer, I added a
photo that showcases what is happening in the google maps example.

--- a/Google Maps Example.ipynb
+++ b/Google Maps Example.ipynb
@@ -2,26 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Constructing List of Results...\n"
+     ]
+    }
+   ],
    "source": [
+    "'''\n",
+    "    Here is an example that overlays data\n",
+    "    data over a map.\n",
+    "'''\n",
+    "\n",
+    "\n",
     "import gmaps\n",
     "import gmaps.datasets\n",
+    "import json\n",
+    "import os\n",
+    "from bs4 import BeautifulSoup\n",
     "from craigslist import *\n",
+    "from util import *\n",
     "gmaps.configure(api_key=\"AIzaSyC0ofPXXFaa1HT5Q-0BOCE98wOVjxm9qHo\")\n",
     "\n",
-    "data = gmaps.datasets.load_dataset('taxi_rides')\n",
+    "# Collect the data from craigslist\n",
+    "\n",
+    "\n",
+    "# get the collection of desired data\n",
+    "houses = CraigslistHousing(\n",
+    "    site=\"boston\",\n",
+    "    filters = {\n",
+    "        \"housing_type\" : [\n",
+    "            \"house\",\n",
+    "            \"townhouse\"\n",
+    "        ]\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# strip the data down the bare essentials now: coordinates,\n",
+    "# and square footage.\n",
+    "results = houses.get_results(limit=100, geotagged=True)\n",
+    "\n",
+    "# get the square footage of each house\n",
+    "resList = []\n",
+    "print(\"Constructing List of Results...\")\n",
+    "for result in results:\n",
+    "\n",
+    "    attrs = get_attrs(result)\n",
+    "    sqft = search_for(attrs, \"ft\")\n",
+    "\n",
+    "    #print \"Attr: \" + str(attr)\n",
+    "    if not sqft is None and not result[\"geotag\"] is None and len(sqft) > 0:\n",
+    "        newRes = result[\"geotag\"]\n",
+    "        resList.append(newRes)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ===============================>\n",
+    "\n",
     "\n",
     "m = gmaps.Map()\n",
-    "m.add_layer(gmaps.Heatmap(data=data))\n",
-    "m"
+    "m.add_layer(gmaps.Heatmap(data=resList))\n",
+    "m\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
@@ -41,7 +107,7 @@
   },
   "widgets": {
    "state": {
-    "b4d98b5fdab54be7ae7651987541979b": {
+    "c16faca3020b4dc69cf673cf9d505235": {
      "views": [
       {
        "cell_index": 0
