Added Image Example
Updated util.py
Added images notebook

--- a/gmaps points.ipynb
+++ b/gmaps points.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -72,8 +72,10 @@
     "\n",
     "\n",
     "m = gmaps.Map()\n",
-    "heatmap = gmaps.Heatmap(data=resList)\n",
-    "m.add_layer(heatmap)\n",
+    "points = gmaps.symbol_layer(\n",
+    "    resList, fill_color=\"red\", stroke_color=\"green\", scale=1\n",
+    ")\n",
+    "m.add_layer(points)\n",
     "m\n"
    ]
   },
@@ -108,7 +110,7 @@
   },
   "widgets": {
    "state": {
-    "3fe1345f44c24034a9241e0f2f89fc1c": {
+    "283a5c51199046c3a48ad589570aa958": {
      "views": [
       {
        "cell_index": 0
