--- a/Google Maps Example.ipynb
+++ b/Google Maps Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,8 @@
     "\n",
     "\n",
     "m = gmaps.Map()\n",
-    "m.add_layer(gmaps.Heatmap(data=resList))\n",
+    "heatmap = gmaps.Heatmap(data=resList)\n",
+    "m.add_layer(heatmap)\n",
     "m\n"
    ]
   },
@@ -107,7 +108,7 @@
   },
   "widgets": {
    "state": {
-    "c16faca3020b4dc69cf673cf9d505235": {
+    "898953b2b3df43b2962fc7cbc05ce968": {
      "views": [
       {
        "cell_index": 0
